nearAllAttractions() corrected + mock used